log/build_2025-12-10_21-09-59/arm_control/stderr.log
  File "/home/unitree/106a_final/install/arm_control/lib/python3.8/site-packages/arm_control/ik_solver.py", line 47
    max_iter=100   # <--- INCREASE THIS (Default is usually ~10)
    ^
SyntaxError: invalid syntax

